--- a/public/stylesheets/sass/_section.scss
+++ b/public/stylesheets/sass/_section.scss
@@ -45,6 +45,7 @@ body.courses-show {
         p {
           color: #ddd;
           font: 300 16px/24px $sans-serif;
+          margin: 0 0 8px 0;
           text-shadow: 0 1px 0 #222;
         }
 
@@ -212,7 +213,11 @@ body.courses-show {
         dd {
           color: #333;
           font: 400 14px/20px $sans-serif;
-          margin: 0 0 12px 0;
+          margin: 0 0 14px 0;
+
+          p {
+            margin: 0 0 8px 0;
+          }
         }
       }
     }
